Fixed -> blogpost image overlapping with the pop up message

--- a/css/BlogStyle.css
+++ b/css/BlogStyle.css
@@ -256,6 +256,10 @@
         margin-top: 1%;
         width: 100%;
     }
+
+    #userDeleteBlogpostPopUp h1{
+        font-size: 1.5rem;
+    }
 }
 
 /* Comment section for blogpost */
